Stmt. of author added, fields/file names changed.

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,3 +1,7 @@
+<!--
+"StAuth10222: I Nenad Skocic, 000107650 certify that this material is my original work. No other person's work has been used 
+without due acknowledgement. I have not made my work available to anyone else."
+-->
 {{>header}}
 
 {{>navigation}}
@@ -6,7 +10,7 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Login</h2>
-      <p>New user? <a href="/signup">Sign Up</a></p>
+      <p>New user? <a href="/signup">Sign Up</a> for an account!</p>
       <p>Enter your username and password below to login.</p>
       <p style="color:red;">{{ login_error }}</p>
       <form action="/login/attemptlogin" method="post">
