--- a/views/footer.mustache
+++ b/views/footer.mustache
@@ -1,3 +1,7 @@
+<!--
+"StAuth10222: I Nenad Skocic, 000107650 certify that this material is my original work. No other person's work has been used 
+without due acknowledgement. I have not made my work available to anyone else."
+-->
 <div class="footer">
   <h2>Copyright 2021</h2>
 </div>
