--- a/views/editors.mustache
+++ b/views/editors.mustache
@@ -1,3 +1,7 @@
+<!--
+"StAuth10222: I Nenad Skocic, 000107650 certify that this material is my original work. No other person's work has been used 
+without due acknowledgement. I have not made my work available to anyone else."
+-->
 {{>header}}
 
 {{>navigation}}
@@ -6,7 +10,43 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Editors</h2>
-      <p>Only editors should be able to view this page!</p>
+      <p>Only editors (not even members) should be able to see the editors page.</p>
+    </div>
+    <div>
+        <h3>Users</h3>
+        <table>
+            <tr>
+                <th>Username</th>
+                <th>Password</th>
+                <th>Level</th>
+                <th>Delete</th>
+            </tr>
+            {{#users}}
+            <tr>
+                <td>{{username}}</td>
+                <td>{{password}}</td>
+                <td>{{level}}</td>
+                <td><a href="/editors/delete/users/{{rowid}}">D</a></td>
+            </tr>
+            {{/users}}
+        </table>
+    </div>
+    <div>
+        <h3>Articles</h3>
+        <table>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Delete</th>
+            </tr>
+            {{#articles}}
+            <tr>
+                <td>{{title}}</td>
+                <td>{{username}}</td>
+                <td><a href="/editors/delete/articles/{{rowid}}">D</a></td>
+            </tr>
+            {{/articles}}
+        </table>
     </div>
   </div>
 
