--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -1,3 +1,7 @@
+<!--
+"StAuth10222: I Nenad Skocic, 000107650 certify that this material is my original work. No other person's work has been used 
+without due acknowledgement. I have not made my work available to anyone else."
+-->
 {{>header}}
 
 {{>navigation}}
@@ -6,8 +10,8 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Sign-up for an account</h2>
-      <p style="color:red;">{{ signup_message}}</p>
-      <form action="/login/attemptlogin" method="post">
+      <p style="color:red;">{{{ signup_message }}}</p>
+      <form action="/signup/createaccount" method="post">
         <label for="username">Username:</label>
         <input type="text" name="username"> <br /> <br />
         <label for="password">Password:</label>
